# devbox

./: .gitignore  Cargo.toml  Dioxus.toml  tauri.conf.json
assets/: main.css
icons/: icon.icns
src/: main.rs
web/: app.js  index.html  styles.css
