[package]
name = "devtoolbox"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
dioxus = { version = "0.6", features = ["desktop"] }
hex = "0.4"
md-5 = "0.10"
rand = "0.8"
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
urlencoding = "2.1"
uuid = { version = "1.10", features = ["v4"] }
